<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToyStory">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".08"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".92"/>

    <ImageView
        android:id="@+id/imgToyStory"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/toy_story"
        android:scaleType="centerCrop"
        android:foreground="@color/imgForeground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45"/>

    <ImageView
        android:id="@+id/imgCover"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/cover_page"
        app:layout_constraintStart_toEndOf="@id/guideV1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideV2"
        app:layout_constraintBottom_toTopOf="@id/guideH1"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="1"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/imgCover"
        app:layout_constraintTop_toBottomOf="@id/imgToyStory"
        app:layout_constraintEnd_toStartOf="@id/guideV2"
        app:layout_constraintBottom_toTopOf="@id/guideH1"
        app:layout_constraintHorizontal_bias="0.2">
    <TextView
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_title"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/movie_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_date"
        android:textSize="12sp"/>

    </LinearLayout>
        <Button
            android:id="@+id/btnRent"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/rent"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/guideV1"
            app:layout_constraintEnd_toStartOf="@id/btnBuy"
            app:layout_constraintTop_toBottomOf="@id/guideH1"
            app:layout_constraintBottom_toTopOf="@id/descriptionTxt"/>

        <Button
            android:id="@+id/btnBuy"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/buy"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintStart_toEndOf="@id/btnRent"
            app:layout_constraintTop_toBottomOf="@id/guideH1"
            app:layout_constraintEnd_toStartOf="@id/guideV2"
            app:layout_constraintBottom_toTopOf="@id/descriptionTxt"/>


    <TextView
        android:id="@+id/descriptionTxt"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:text="@string/description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideV2"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@id/guideV1"
        app:layout_constraintTop_toBottomOf="@id/guideH1"
        app:layout_constraintVertical_bias="0.814" />

</androidx.constraintlayout.widget.ConstraintLayout>